--- a/src/app/features/issue/jira/jira-issue/jira-issue-content/jira-issue-content.component.scss
+++ b/src/app/features/issue/jira/jira-issue/jira-issue-content/jira-issue-content.component.scss
@@ -17,6 +17,16 @@
   // to shrink the th col to a min
   td {
     width: 100%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+
+    ::ng-deep img,
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
   }
 
   .description-row {
